# valkey-tcl

./: CMakeLists.txt  CONTRIBUTORS.txt  LICENSE  Makefile  TODO.txt  pkgIndex.tcl.in  readme.md
.github/workflows/: linux-build-9.yml  linux-build-ssl.yml  linux-build.yml  memleaks.yml
cmake/: valkey-config.cmake  valkey-targets-debug.cmake  valkey-targets.cmake
src/: common.h  library.c  library.h  tclvalkeyCmd.c  tclvalkeyCmd.h  tclvalkeyCmdSub.c  tclvalkeyCmdSub.h  tclvalkeyCtx.c  tclvalkeyCtx.h  tclvalkeyReply.c  tclvalkeyReply.h
tests/: all.tcl  arguments.test  auth.test  basic.test  command.test  command_raw.test  command_simple.test  common.tcl  configure.test  fake_server.tcl  memleakhunter.tcl  reconn.test  ssl.test  test.acl
tests/certs/: ca-cert.pem  ca-key.pem  client-cert.pem  client-key.pem  client-req.pem  gen.sh  server-cert.pem  server-key.pem  server-req.pem
